--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable-list": "^4.2.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "terser": "^5.37.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
